--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -41,7 +41,23 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --animate-wave: wave 1.5s ease-out infinite;
+
+  @keyframes wave {
+    100% {
+      opacity: 0;
+      transform: scale(1.5);
+    }
+    ,
+    0% {
+      /* transform: scale(2); */
+      opacity: 100;
+    }
+  }
 }
+
+/* @theme {
+} */
 
 :root {
   --radius: 0.625rem;
@@ -120,3 +136,4 @@
     @apply bg-background text-foreground;
   }
 }
+
